--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
 </head>
-<body id="hi">
+<body id="hi" style="height:100vh">
   <h1>hello bro</h1>
   <button onclick="myfun()" class="btn btn-outline-warning mr-1 float-left"> DARK</button>
   <button onclick="myfun1()" class="btn btn-outline-warning float-right"> LIGHT</button><br><br><br><br><br><br><br><br>
